--- a/src/games/geoguesser/geoguesser.module.css
+++ b/src/games/geoguesser/geoguesser.module.css
@@ -9,7 +9,7 @@
     right: 0;
     padding: 1rem;
     transition: transform 0.5s ease-in;
-    transform-origin: bottom right; 
+    transform-origin: bottom right;
 }
 .mapContainer:hover {
     transform: scale(2);
@@ -17,7 +17,7 @@
 
 .map {
     height: 25vh;
-    aspect-ratio: 1/1; 
+    aspect-ratio: 1/1;
 }
 
 .img {
@@ -40,4 +40,31 @@
 .mapContainer:hover .button {
     transform: scale(0.6);
     left: 27%;
+}
+
+.done {
+    z-index: 500;
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    background: white;
+    padding: 1rem;
+    border-radius: 20px;
+    transition: all 0.5s ease-in;
+    transform-origin: bottom right;
+    text-align: center;
+}
+
+.done > button {
+    background: rgb(255,0,0);
+    background: linear-gradient(61deg, rgba(255,0,0,1) 0%, rgba(138,23,23,1) 100%);
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin: 0.5rem 0.5rem 0 0.5rem;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: all 0.5s ease-in;
+    transform-origin: bottom right;
 }
