--- a/src/components/RightPriceGame.css
+++ b/src/components/RightPriceGame.css
@@ -13,7 +13,7 @@
     display: inline-block;
     margin-left: 10px;
   }
-  
+
 
 
   /* Tooltip text */
@@ -27,13 +27,13 @@
     border-radius: 6px;
     margin-left: 10px;
     font-size: 10px;
-    
-   
+
+
     /* Position the tooltip text - see examples below! */
     position: absolute;
     z-index: 1;
   }
-  
+
   /* Show the tooltip text when you mouse over the tooltip container */
   .tooltip:hover .tooltiptext {
     visibility: visible;
@@ -57,7 +57,8 @@
 
   .buttonValidation {
     height: 45px;
-    margin-left: 10px;
+    margin-top: 10px;
+    color: white;
   }
 
   .question-mark{
